# CleanDuke

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  duke3d.h  dukeunix.h  dukewin.h  funct.h  function.h  game.c  game.h  gamedef.c  gamedefs.h  global.c  global.h  names.h  player.c  player.h  premap.c  premap.h  sector.c  sector.h  soundefs.h  types.h
src/actors/: CMakeLists.txt
src/actors/include/actors/: actors.h
src/actors/src/: actors.c  p_interpolation.c  p_weapon.c
src/audiolib/: CMakeLists.txt  sdl_midi.c  sounds.c
src/audiolib/include/audiolib/: _multivc.h  dpmi.h  dsl.h  fx_man.h  linklist.h  ll_man.h  multivoc.h  music.h  pitch.h  sndcards.h  sounds.h
src/audiolib/src/: dpmi.c  dsl.c  fx_man.c  ll_man.c  multivoc.c  mv_mix.c  mvreverb.c  pitch.c  sdl_midi.c  sounds.c
src/automap/: CMakeLists.txt
src/automap/include/automap/: am_draw.h
src/automap/src/: am_main.c  am_overhead.c  am_overhead.h  am_view.c  am_view.h
src/con/: CMakeLists.txt
src/con/include/con/: con.h
src/con/src/compiler/: com_keyword.c  com_keyword.h  com_label.c  com_label.h  com_main.c  com_main.h  com_misc.c  com_misc.h  com_parser.c  com_parser.h  con_keyword.c  con_keyword.h  con_label.c  con_label.h  con_main.c  con_main.h  con_misc.c  con_misc.h  con_parser.c  con_parser.h
src/con/src/compiler/cmds/: com_action.c  com_actor.c  com_ai.c  com_betaname.c  com_braces.c  com_cmds.h  com_comment.c  com_define.c  com_gamestartup.c  com_if.c  com_include.c  com_move.c  com_music.c  com_palfrom.c  com_state.c  con_action.c  con_actor.c  con_ai.c  con_betaname.c  con_braces.c  con_cmds.h  con_comment.c  con_define.c  con_gamestartup.c  con_if.c  con_include.c  con_move.c  con_music.c  con_palfrom.c  con_state.c
src/con/src/vm/: vm_dodge.c  vm_main.c  vm_main.h  vm_move.c  vm_op.c
src/con/src/vm/ops/: vm_action.c  vm_actor.c  vm_ai.c  vm_braces.c  vm_count.c  vm_cstat.c  vm_debris.c  vm_debug.c  vm_dist.c  vm_endofgame.c  vm_fall.c  vm_glass.c  vm_guts.c  vm_hit_radius.c  vm_if.c  vm_if_plr.c  vm_ifcansee.c  vm_inventory.c  vm_kill.c  vm_mail.c  vm_money.c  vm_move.c  vm_nullop.c  vm_operate.c  vm_ops.h  vm_pal.c  vm_paper.c  vm_plr_health.c  vm_plr_kick.c  vm_plr_stomp.c  vm_quote.c  vm_reset_plr.c  vm_shoot.c  vm_size.c  vm_sleeptime.c  vm_sound.c  vm_spawn.c  vm_state.c  vm_strength.c  vm_target.c  (+4 more)
src/config/: CMakeLists.txt  config.c
src/config/include/config/: config.h
src/config/src/: config.c  scriplib.c  scriplib.h
src/console/: CMakeLists.txt  console.c  cvar_defs.c  cvars.c
src/console/include/console/: _functio.h  console.h  cvar_defs.h  cvars.h
src/console/src/: console.c  cvar_defs.c  cvars.c
src/hud/: CMakeLists.txt
src/hud/src/: hu_draw.c  hu_draw.h  hu_main.c  hu_statusbar.c  hu_text.c  hu_text.h
src/input/: CMakeLists.txt  control.c  mouse.c
src/input/include/input/: control.h  joystick.h  keyboard.h  mouse.h
src/input/src/: control.c  joystick.c  keyboard.c  mouse.c
src/memory/: CMakeLists.txt  cache.c
src/memory/include/memory/: cache.h
src/memory/src/: cache.c
src/menu/: CMakeLists.txt  menu.c
src/menu/include/menu/: menu.h
src/menu/src/: animlib.c  animlib.h  menu.c
src/renderer/: CMakeLists.txt
src/renderer/include/renderer/: draw.h  renderer.h
src/renderer/src/: r_draw.c  r_main.c  r_mirror.c  r_sprite.c  r_wall.c
src/rts/: CMakeLists.txt
src/rts/include/rts/: rts.h
src/rts/src/: _rts.h  rts.c
src/video/: CMakeLists.txt  display.c  vid_mode.c  vid_palette.c
src/video/include/video/: display.h  mode.h  palette.h  vid_mode.h  vid_palette.h
src/video/src/: vid_display.c  vid_mode.c  vid_palette.c
